[package]
name = "glplay-rs"
version = "0.0.1"
license = "MIT"
description = "Simple application to attempt to initialize egl/gles with gbm/kms"
repository = "https://github.com/guster32/glplay-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drm-rs = { path = "drm-rs", version = "0.0.1" }

[workspace]
members = [
    "drm-rs",
    "drm-rs/drm-ffi",
    "drm-rs/drm-ffi/drm-sys",
]