[package]
name = "glplay-rs"
version = "0.0.1"
license = "MIT"
description = "Simple application to attempt to initialize egl/gles with gbm/kms"
repository = "https://github.com/guster32/glplay-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drm-rs = { path = "drm-rs", version = "0.0.1"}
drm-ffi = { path = "drm-rs/drm-ffi", version = "0.0.1"}
gbm-rs = { path = "gbm-rs", version = "0.0.1" }
slog = { version = "2.7.0" }
slog-stdlog = { version = "4.1.0"}
slog-term = { version = "2.9.0" }
drm-fourcc = { version = "^2.2.0"}
thiserror = { version = "1.0.30" }
nix = "0.23.1"
once_cell = "1.8.0"
calloop = "0.9.0"
libc = "0.2.103"
bitflags = "1"

[dev-dependencies]
slog-term = "2.9.0"

[workspace]
members = [
    "drm-rs",
    "drm-rs/drm-ffi",
    "drm-rs/drm-ffi/drm-sys",
    "gbm-rs",
    "gbm-rs/gbm-sys",
]

[[example]]
name = "raw_drm"
