[package]
name = "glplay-rs"
version = "0.0.1"
license = "MIT"
description = "Simple application to attempt to initialize egl/gles with gbm/kms"
repository = "https://github.com/guster32/glplay-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drm-rs = { path = "./drm-rs", version = "0.0.1"}
smithay = { path = "smithay" }
slog = { version = "2.7.0" }
slog-term = { version = "2.9.0" }

[workspace]
members = [
    "smithay"
]

