[package]
name = "drm-rs"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
version = "0.0.1"
license = "MIT"
authors = ["Gustavo Branco <guster32@gmail.com>"]

[dependencies]
bitflags = "2"
bytemuck = { version = "1.12", features = ["extern_crate_alloc", "derive"] }
drm-ffi = { path = "drm-ffi", version = "0.0.1" }
drm-fourcc = "^2.2.0"

[dependencies.nix]
version = "0.27"
default-features = false
features = ["mman", "fs"]
