[package]
name = "smithay"
version = "0.3.0"
authors = [
    "Victor Berger <victor.berger@m4x.org>",
    "Drakulix (Victor Brekenfeld)",
]
license = "MIT"
description = "Smithay is a library for writing wayland compositors."
repository = "https://github.com/Smithay/smithay"
edition = "2018"
readme = "README.md"
homepage = "https://smithay.github.io/"
keywords = ["wayland", "compositor", "graphics", "server"]
categories = ["gui"]

[dependencies]
drm-rs = { path = "../drm-rs", version = "0.0.1" }
drm-ffi = { path = "../drm-rs/drm-ffi", version = "0.0.1" }
gbm-rs = { path = "../gbm-rs", version = "0.0.1" }
slog = { version = "2.7.0" }
slog-stdlog = { version = "4.1.0" }
slog-term = { version = "2.9.0" }
drm-fourcc = { version = "^2.2.0" }
thiserror = { version = "1.0.30" }
nix = { version = "0.27.0" }
profiling = "1.0"
once_cell = "1.8.0"
calloop = "0.12.2"
libc = "0.2.120"
bitflags = "2.2.1"
tracing = "0.1.37"
rustix = { version = "0.38.18", features = [
    "event",
    "fs",
    "mm",
    "net",
    "shm",
    "time",
] }

[dev-dependencies]
slog-term = "2.9.0"
